--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,16 @@
   android:layout_height="match_parent"
   tools:context=".controller.MainActivity">
 
-  <TextView
-    android:id="@+id/message"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/activity_vertical_margin"
-    android:layout_marginStart="@dimen/activity_horizontal_margin"
-    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-    android:text="@string/title_home"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+ <fragment
+  android:id="@+id/nav_host_fragment"
+   android:layout_width="match_parent"
+   android:layout_height="0dp"
+   android:name="androidx.navigation.fragment.NavHostFragment"
+   app:layout_constraintTop_toTopOf="parent"
+   app:layout_constraintStart_toStartOf="parent"
+   app:layout_constraintBottom_toTopOf="@id/navigation"
+   app:defaultNavHost="true"
+   app:navGraph="@navigation/navigation_fragments"/>
 
   <com.google.android.material.bottomnavigation.BottomNavigationView
     android:id="@+id/navigation"
