Added an activity fragment.

--- a/app/src/main/res/navigation/navigation_fragments.xml
+++ b/app/src/main/res/navigation/navigation_fragments.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/navigation_fragments">
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/navigation_fragments"
+  app:startDestination="@id/foodSearchFragment">
 
+  <fragment
+    android:id="@+id/foodSearchFragment"
+    android:name="edu.cnm.deepdive.macroscalculator.controller.FoodSearchFragment"
+    android:label="fragment_food_search"
+    tools:layout="@layout/fragment_food_search">
+    <action
+      android:id="@+id/to_activityFragment"
+      app:destination="@id/activityFragment"/>
+  </fragment>
+  <fragment
+    android:id="@+id/activityFragment"
+    android:name="edu.cnm.deepdive.macroscalculator.controller.ActivityFragment"
+    android:label="fragment_activity"
+    tools:layout="@layout/fragment_activity">
+    <action
+      android:id="@+id/to_foodSearchFragment"
+      app:destination="@id/foodSearchFragment"/>
+  </fragment>
 </navigation>
