Added in GoogleSignInService and implementation into build.gradle

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,18 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
-    android:id="@+id/navigation_home"
+    android:id="@+id/food_search_fragment"
     android:icon="@drawable/ic_home_black_24dp"
     android:title="@string/title_foods"/>
 
   <item
-    android:id="@+id/navigation_dashboard"
+    android:id="@+id/activity_fragment"
     android:icon="@drawable/ic_dashboard_black_24dp"
     android:title="@string/title_dashboard"/>
-
-  <item
-    android:id="@+id/navigation_notifications"
-    android:icon="@drawable/ic_notifications_black_24dp"
-    android:title="@string/title_notifications"/>
 
 </menu>
