--- a/app/src/main/res/layout/fragment_food_search.xml
+++ b/app/src/main/res/layout/fragment_food_search.xml
@@ -5,10 +5,6 @@
   android:layout_height="match_parent"
   tools:context=".controller.FoodSearchFragment">
 
-  <!-- TODO: Update blank fragment layout -->
-  <TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/hello_blank_fragment"/>
+  <!-- TODO Add a searchView and a recyclerView of foods-->
 
 </FrameLayout>
