--- a/app/src/main/res/layout/fragment_food_search.xml
+++ b/app/src/main/res/layout/fragment_food_search.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   tools:context=".controller.FoodSearchFragment">
 
-  <!-- TODO Add a searchView and a recyclerView of foods-->
+  <androidx.appcompat.widget.SearchView
+    android:id="@+id/food_search"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:iconifiedByDefault="false"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"/>
 
-</FrameLayout>
+  <ListView
+    android:id="@+id/food_list"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/food_search"
+    app:layout_constraintBottom_toBottomOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
