--- a/app/src/main/res/layout/fragment_food_search.xml
+++ b/app/src/main/res/layout/fragment_food_search.xml
@@ -22,4 +22,13 @@
     app:layout_constraintTop_toBottomOf="@id/food_search"
     app:layout_constraintBottom_toBottomOf="parent"/>
 
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/save_foods"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    android:src="@drawable/ic_save"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
